# Java_Game_Engine

./: .gitignore  AGENTS.md  Dockerfile  README.md  build.gradle  i3run.sh  install.sh  run.sh  run1.sh  settings.gradle
android/: local.properties  settings.gradle.kts
android/engine-platform-android/: CMakeLists.txt  build.gradle.kts
android/engine-platform-android/src/androidTest/java/com/njst/gaming/android/: BattleArenaGpuVsCpuBenchmarkInstrumentedTest.java  BoneCpuBenchmarkInstrumentedTest.java  NativeMathTest.java
android/engine-platform-android/src/main/: AndroidManifest.xml
android/engine-platform-android/src/main/assets/: untitled.fbx
android/engine-platform-android/src/main/assets/battle_arena/: defeated.character.json  defeated.hitbox_tracks.json
android/engine-platform-android/src/main/assets/shaders/: GPU_NeuralNetwork.glsl  bake_spherical_heightmap.frag.glsl  bake_spherical_heightmap.vert.glsl  battle_arena_bone_compute.glsl  battle_arena_bone_compute_identity_output.glsl  frag.glsl  frag11.glsl  frag111.glsl  frag_ui.glsl  nn_compute_shader.glsl  shadow_depth_skinned_vert.glsl  terrain_frag.glsl  terrain_vert.glsl  ui_vert.glsl  vert1.glsl  vert11.glsl  vert111.glsl  vert2.glsl
android/engine-platform-android/src/main/assets/weighted_geometry/: defeated_mesh.ser  jump_animation.ser  jump_animation00.ser  right hook_animation_0.ser  taking punch_animation_0.ser
android/engine-platform-android/src/main/assets/world/: open_world.json
android/engine-platform-android/src/main/cpp/: njst_audio.cpp  njst_math.cpp
battle-arena-core/: build.gradle
(+458 files in other folders)
